Nav window alignment bug fixed

--- a/src/assets/style/nav_style.scss
+++ b/src/assets/style/nav_style.scss
@@ -4,7 +4,7 @@ $yellow: #f4c724;
 $beige: #f2edc9;
 $light: #fffdf2;
 
-.nav-container-A {
+.ham-container-A {
   position: fixed;
   width: 85px;
   right: 0;
@@ -17,7 +17,7 @@ $light: #fffdf2;
   background: $yellow;
 }
 
-.nav-container-B {
+.ham-container-B {
   position: fixed;
   width: 85px;
   right: 0;
@@ -65,6 +65,8 @@ $light: #fffdf2;
   display: flex;
   flex-direction: column;
 
+  align-items: center;
+
   overflow-x: hidden;
   z-index: 1;
 
@@ -74,18 +76,8 @@ $light: #fffdf2;
   opacity: 0.9;
 }
 
-.nav {
-}
-
-.nav-item {
-  margin: 10px;
-}
-
 .nav-link-1 {
   position: absolute;
-  display: block;
-  top: 2vw;
-  left: 50%;
 
   padding: 10px;
 
@@ -97,9 +89,7 @@ $light: #fffdf2;
 
 .nav-link-2 {
   position: absolute;
-  display: block;
-  bottom: -2vw;
-  left: 50%;
+  bottom: 0;
 
   padding: 10px;
 
@@ -111,9 +101,8 @@ $light: #fffdf2;
 
 .nav-link-3 {
   position: absolute;
-  display: block;
-  top: 50%;
-  left: 2vw;
+  top: 45%;
+  left: 0;
 
   padding: 10px;
 
@@ -125,9 +114,8 @@ $light: #fffdf2;
 
 .nav-link-4 {
   position: absolute;
-  display: block;
-  top: 50%;
-  right: 2vw;
+  top: 45%;
+  right: 0;
 
   padding: 10px;
 
@@ -139,14 +127,13 @@ $light: #fffdf2;
 
 .closeBtn {
   position: absolute;
-  top: 0;
-  right: 25px;
+  right: 1.25vw;
+  top: 0.75vw;
 
   font-size: 1rem;
   color: $light;
 
   transition: 0.5s;
-  text-decoration: none;
 }
 
 .fade-enter-active,
